# q2-fail

./: README.md  pyproject.toml
q2_fail/: __init__.py  _fail.py  plugin_setup.py
